--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@ body{
     background-color: black;
     color: white;
 }
+
+.ball{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: green;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 100px auto;
+}
